Fix font size on mobile

--- a/static/index.css
+++ b/static/index.css
@@ -74,7 +74,10 @@ footer {
 /* 	display: flex; */
 /* 	flex-direction: column; */
 /* 	justify-content: center; */
-    gap: 2rem;
+    body {   font-size: 1.05rem; }
+    header, footer {
+	font-size: .95rem;
+    }
 }
 
 code { word-break: break-all; }
